--- a/packages/server/pyproject.toml
+++ b/packages/server/pyproject.toml
@@ -3,13 +3,9 @@ name = "server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Amit Genish", email = "amitgk159753@gmail.com" }
-]
+authors = [{ name = "Noam Genish" }]
 requires-python = ">=3.12"
-dependencies = [
-    "shared",
-]
+dependencies = ["shared"]
 
 [project.scripts]
 server = "server:main"
