--- a/packages/shared/pyproject.toml
+++ b/packages/shared/pyproject.toml
@@ -3,11 +3,12 @@ name = "shared"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Amit Genish", email = "amitgk159753@gmail.com" }
-]
+authors = [{ name = "Noam Genish" }]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "coloredlogs>=15.0.1",
+    'colorama >=0.4.6; platform_system == "Windows"',
+]
 
 [build-system]
 requires = ["hatchling"]
