add client-logs script to show logs

--- a/packages/client/pyproject.toml
+++ b/packages/client/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "shared",
 ]
 
+[project.scripts]
+client-logs = "client:main"
+
 [project.gui-scripts]
 client = "client:main"
 
